<RelativeLayout android:id="@+id/fragment_login_verify"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:id="@+id/login_view_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp">
        <ImageView
            style="@style/MeatO_Image_Product_Login"
            android:src="@mipmap/mutton"/>

        <ImageView
            style="@style/MeatO_Image_Product_Login"
            android:src="@mipmap/chicken"/>

        <ImageView
            style="@style/MeatO_Image_Product_Login"
            android:src="@mipmap/ingredients"/>

        <ImageView
            style="@style/MeatO_Image_Product_Login"
            android:src="@mipmap/spices"/>

        <ImageView
            style="@style/MeatO_Image_Product_Login"
            android:src="@mipmap/dessert"/>
    </LinearLayout>

    <TextView
        android:id="@+id/login_verify_name"
        style="@style/MeatO_TextView.Title.CenterAligned"
        android:text="@string/title_activity_login_verify"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/login_view_products"/>

    <LinearLayout
        android:id="@+id/login_verify_view_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:elevation="5dp">
        <LinearLayout
            android:id="@+id/login_verify_button_add_address"
            style="@style/MeatO_View_Button_Scaled">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@mipmap/delivery_address"
                android:layout_margin="10dp"
                android:clickable="false"/>
            <View
                style="@style/MeatO_View_Vertical_Divider" />
            <TextView
                style="@style/MeatO_TextView.Title.CenterAligned"
                android:text="@string/button_login_add_address"
                android:layout_gravity="center"
                android:clickable="false"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_verify_name"
        android:layout_above="@id/login_verify_view_login_button"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.patel.akif.meat_o.controls.ValidatorTextInput
                android:id="@+id/login_verify_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:useLightTheme="true"
                app:hint="@string/label_login_first_name"
                app:showValidator="false"
                app:inputType="PersonName"
                app:readOnly="true"
                android:layout_marginBottom="10dp"/>

            <com.patel.akif.meat_o.controls.ValidatorTextInput
                android:id="@+id/login_verify_text_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:useLightTheme="true"
                app:hint="@string/label_login_last_name"
                app:inputType="PersonName"
                app:showValidator="false"
                app:readOnly="true"
                android:layout_marginBottom="10dp"/>

            <com.patel.akif.meat_o.controls.ValidatorTextInput
                android:id="@+id/login_verify_text_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:useLightTheme="true"
                app:hint="@string/label_login_email"
                app:inputType="Email"
                app:showValidator="false"
                app:readOnly="true"
                android:layout_marginBottom="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/login_verify_button_verify_phone"
                    style="@style/MeatO_Button_Flat_Text"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorWhite"
                    android:text="@string/button_login_verify"
                    android:padding="10dp"/>

                <com.patel.akif.meat_o.controls.ValidatorTextInput
                    android:id="@+id/login_verify_text_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:useLightTheme="true"
                    app:hint="@string/label_login_mobile"
                    app:inputType="Phone"
                    app:defaultErrorMsg="@string/message_login_pending_verification"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/login_verify_button_verify_phone"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
