<RelativeLayout android:id="@+id/fragment_add_address"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/colorWhite">
    <LinearLayout
        android:id="@+id/address_view_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp">
        <ImageView
            style="@style/MeatO_Image_Product_Login"
            android:src="@mipmap/mutton"
            android:tint="@color/colorPrimaryDark"/>

        <ImageView
            style="@style/MeatO_Image_Product_Login"
            android:src="@mipmap/chicken"
            android:tint="@color/colorPrimaryDark"/>

        <ImageView
            style="@style/MeatO_Image_Product_Login"
            android:src="@mipmap/ingredients"
            android:tint="@color/colorPrimaryDark"/>

        <ImageView
            style="@style/MeatO_Image_Product_Login"
            android:src="@mipmap/spices"
            android:tint="@color/colorPrimaryDark"/>

        <ImageView
            style="@style/MeatO_Image_Product_Login"
            android:src="@mipmap/dessert"
            android:tint="@color/colorPrimaryDark"/>
    </LinearLayout>

    <TextView
        android:id="@+id/address_name"
        style="@style/MeatO_TextView.Title.CenterAligned"
        android:text="@string/title_activity_login_add_address"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/address_view_products"/>

    <LinearLayout
        android:id="@+id/address_view_button_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:elevation="5dp"
        android:layout_margin="5dp">
        <LinearLayout
            android:id="@+id/address_button_finish"
            style="@style/MeatO_View_Button_Scaled.Dark">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@mipmap/ic_check_circle_black_48dp"
                android:layout_margin="10dp"
                android:clickable="false"
                android:tint="@color/colorWhite"/>
            <View
                style="@style/MeatO_View_Vertical_Divider"
                android:background="@color/colorWhite"/>
            <TextView
                style="@style/MeatO_TextView.Title.CenterAligned"
                android:text="@string/button_address_save"
                android:layout_gravity="center"
                android:clickable="false"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/address_name"
        android:layout_above="@id/address_button_finish"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <com.patel.akif.meat_o.controls.ValidatorTextInput
                android:id="@+id/add_address_text_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/label_address_line_1"
                app:inputType="Address"
                android:layout_marginBottom="10dp"/>

            <com.patel.akif.meat_o.controls.ValidatorTextInput
                android:id="@+id/add_address_text_line_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/label_address_line_2"
                app:inputType="Address"
                android:layout_marginBottom="10dp"/>

            <com.patel.akif.meat_o.controls.ValidatorTextInput
                android:id="@+id/add_address_text_landmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/label_address_line_3"
                app:inputType="Address"
                android:layout_marginBottom="10dp"/>

            <com.patel.akif.meat_o.controls.ValidatorTextInput
                android:id="@+id/add_address_text_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/label_address_line_pin"
                app:inputType="Number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <com.patel.akif.meat_o.controls.ValidatorTextInput
                    android:id="@+id/add_address_text_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hint="@string/label_address_line_state"
                    android:layout_weight="1"
                    app:readOnly="true"/>
                <com.patel.akif.meat_o.controls.ValidatorTextInput
                    android:id="@+id/add_address_text_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hint="@string/label_address_line_city"
                    android:layout_weight="1"
                    app:readOnly="true"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
